--- a/code/HW5.qmd
+++ b/code/HW5.qmd
@@ -19,22 +19,25 @@ Plants are important to the Earth and its environment due to their role in globa
 
 # Methods
 
+## Set-up: Loading Packages
+
 ```{r load-packages}
 library(tidyverse)
 library(here)
 library(janitor)
 library(ggeffects)
 library(performance)
-library(naniar) # or equivalent
-library(flextable) # or equivalent
+library(naniar) 
+library(flextable) 
 library(car)
 library(broom)
 library(dplyr)
-# would be nice to have
 library(corrplot)
 library(AICcmodavg)
 library(GGally)
 ```
+
+## Data Collection + Organization
 
 ```{r read-in-data}
 plant <- read_csv(here("data", "knb-lter-hfr", "hf109-01-sarracenia.csv")) %>% 
@@ -43,6 +46,8 @@ plant <- read_csv(here("data", "knb-lter-hfr", "hf109-01-sarracenia.csv")) %>%
   # selecting columns of interest
   select(totmass, species, feedlevel, sla, chlorophyll, amass, num_lvs, num_phylls)
 ```
+
+## Missing Data
 
 ```{r missing-data-visualization}
 missing.values <- plant %>%
@@ -67,6 +72,8 @@ plant_subset <- plant %>%
   drop_na(chlorophyll, amass, sla, num_lvs, num_phylls)
 ```
 
+## Variable Relationships and Correlation
+
 ```{r correlation-plot}
 # calculate Pearson's r for numerical values only
 plant_cor <- plant_subset %>% 
@@ -84,6 +91,109 @@ title(main = "Correlation Plot",
          sub = "The variables have little, but some correlation with one another.")
 ```
 
+```{r pairs-plot}
+plant_pairs <- plant_subset %>% 
+  select(species:num_phylls)
+ggpairs(plant_pairs) +
+  labs(title = "Relationships Between Variables", caption = "There us some sort of relationship that all the variables have with each other.")
+```
+
+## Models
+
+### Null and Full Models
+
+```{r null-and-full-model}
+null <- lm(totmass ~ 1, data = plant_subset)
+full <- lm(totmass ~ species + feedlevel + sla + chlorophyll + amass + num_lvs + num_phylls, data = plant_subset)
+```
+
+```{r full-diagnostics}
+par(mfrow = c(2,2))
+plot(full)
+check_normality(full)
+check_heteroscedasticity(full)
+```
+
+We visually assessed normality and homoscedasticity of residuals using diagnostic plots for the full model. We also tested for normality using the Shapiro-Wilk test (null = variable of interest (residuals) are normally distributed) and homoscedasticity using the Breusch-Pagan test (null = residuals have constant variance). Based on the assessments, the assumptions of linear regression are not met.
+
+```{r}
+full_log <- lm(log(totmass) ~ species + feedlevel + sla + chlorophyll + amass + num_lvs + num_phylls, data = plant_subset) # hypotheses are about log(total) make sure to back transform from log to actual scale of biomass for results. all the estimates for slope = log scale, exponentiate whatever slope is
+par(mfrow = c(2,2))
+plot(full_log)
+check_normality(full_log)
+check_heteroscedasticity(full_log)
+null_log <- lm(log(totmass) ~ 1, data = plant_subset)
+```
+
+We needed to do a natural log transform of the full model in order to meet the assumptions of linear regression. All of the interpretation will be based on the transform response (natural log transform).
+
+```{r calculate-vif}
+car::vif(full_log) # variable is inflating r^2 if >5; none of them inflate r^2 in this case
+```
+
+We evaluated multicolinearity by calculating the generalized variance inflation factor and determined that none of the variables in the full model are inflating the R\^2 value as they all fall below 5, the number that generally draws inflation concerns.
+
+### Three Other Models
+
+```{r species-as-predictor}
+model2_log <- lm(log(totmass) ~ species, data = plant_subset)
+# check assumptions for model 2
+par(mfrow = c(2,2))
+plot(model2_log)
+check_normality(model2_log)
+check_heteroscedasticity(model2_log)
+```
+
+```{r num-phylls-as-predictor}
+model3 <- lm(totmass ~ num_phylls, data = plant_subset)
+# check assumptions for model 2
+par(mfrow = c(2,2))
+plot(model3)
+check_normality(model3)
+check_heteroscedasticity(model3)
+```
+
+```{r feedlevel-chlorophyll-species-as-predictors}
+fcs_log <- lm(log(totmass) ~ feedlevel + species + chlorophyll, data = plant_subset)
+par(mfrow = c(2,2))
+plot(fcs_log)
+check_normality(fcs_log)
+check_heteroscedasticity(fcs_log)
+```
+
+### Model Comparison
+
+```{r model-comparison}
+MuMIn::AICc(full_log, model3, model2_log, fcs_log, null_log)
+```
+
 # Results
 
+```{r visualization-of-biomass-and-1predictor}
+model_pred <- ggpredict(full_log, term = "species", back.transform = TRUE) # ignore standard error part; back transform to communicate results on scale of original variable. 
+model_pred
+
+plot(model_pred, add.data = TRUE) + # make visualization of biomass and 1 predictor
+  labs(title = "Biomass of Individual Sarracenia Based on Species", x = "Species", y =
+"Biomass (g)", caption = "All else constant, you would expect for the mass of species to be higher for leucophylla and flava, and lower for psittacina and rosea.") +
+  theme_classic() +
+  theme(legend.position = "none",
+        text = element_text(family = "Times New Roman"),
+        axis.title = element_text(size = 14),
+        axis.text = element_text(size = 8),
+        plot.caption = element_text(hjust = 0),
+        plot.caption.position = "plot",
+        plot.title.position = "plot")
+```
+
+```{r}
+summary(full_log)
+```
+
 # References
+
+Harris, C.S., Asim, M., Saleem, A. *et al* (2012)*.* Characterizing the cytoprotective activity of Sarracenia purpurea L., a medicinal plant that inhibits glucotoxicity in PC12 cells. *BMC Complement Altern Med* **12**, 245. https://doi.org/10.1186/1472-6882-12-245
+
+Heil, J. A., Wolock, C. J., Pierce, N. E., Pringle, A., & Bittleston, L. S. (2022). *Sarracenia* pitcher plant‐associated microbial communities differ primarily by host species across a longitudinal gradient. *Environmental Microbiology*, *24*(8), 3500--3516. https://doi.org/10.1111/1462-2920.15993 
+
+Jennings, D. E., & Rohr, J. R. (2011). A review of the conservation threats to carnivorous plants. *Biological Conservation*, *144*(5), 1356--1363. https://doi.org/10.1016/j.biocon.2011.03.013 
